wlanpi-webui (1.1.6) stable; urgency=medium

  * UI improvements

 -- Josh Schmelzle <josh@joshschmelzle.com>  Thu, 07 Jul 2023 12:48:32 -0500

wlanpi-webui (1.1.5-2) stable; urgency=medium

  * add nav link to kismet page

 -- Ben Toner <ben@numerousnetworks.co.uk>  Thu, 26 Jan 2023 19:48:32 -0000

wlanpi-webui (1.1.5-1) stable; urgency=medium

  * fix flask version
  * nginx: ignore favicon errors and do not log them

 -- Josh Schmelzle <josh@joshschmelzle.com>  Sat, 19 Feb 2022 23:17:32 -0500

wlanpi-webui (1.1.5) unstable; urgency=medium

  * branding: update favicon and layout logo

 -- Josh Schmelzle <josh@joshschmelzle.com>  Sat, 19 Feb 2022 21:46:35 -0500

wlanpi-webui (1.1.4-2) unstable; urgency=medium

  * :8080 index is now librespeed_simple.html
  * librespeed: clean up 
  * menu: rename purge script to purge data 

 -- Josh Schmelzle <josh@joshschmelzle.com>  Tue, 15 Feb 2022 23:49:06 -0500

wlanpi-webui (1.1.3-7) unstable; urgency=medium

  * speedtest refactored to librespeed
  * add alternate librespeed page
  * navigation improvements for speedtest and profiler
  * add nav link to cockpit terminal page
  * improvements to the profiler page
  * nginx header tweaks for librespeed config
  * improvements to network cards on devices with small viewports

 -- Josh Schmelzle <josh@joshschmelzle.com>  Wed, 10 Feb 2022 17:00:08 -0500

wlanpi-webui (1.1.2-2) unstable; urgency=medium

  * minor styling changes on speedtest.html
  * bump uikit framework to 3.11.1
  * bump speedtest.js and _worker.js to v5.2.5
  * add LibreSpeed attribution on speedtest.html
  * remove client IP from speedtest page because it depended on php
  * changes required to support bullseye

 -- Josh Schmelzle <josh@joshschmelzle.com>  Thu, 09 Dec 2021 00:27:39 -0500

wlanpi-webui (1.1.0-b3) unstable; urgency=medium

  * Handle server error when profiles do not have a band identifier in the filename.

 -- Josh Schmelzle <josh@joshschmelzle.com>  Tue, 02 Nov 2021 23:25:41 -0400
