@@ -17,7 +17,7 @@ server {
     access_log off;
     error_log /var/log/librespeed_error.log;
 
-    location /librespeed/getip {
+    location /getip {
         add_header "Cache-Control" "no-store, no-cache, must-revalidate, max-age=0, s-maxage=0";
         add_header "Cache-Control" "post-check=0, pre-check=0";
         add_header "Pragma" "no-cache";
@@ -25,7 +25,7 @@ server {
         return 200 $remote_addr;
     }
 
-    location /librespeed/garbage.dat {
+    location /data/garbage.dat {
         add_header 'Content-Description' 'File Transfer';
         add_header 'Content-Type' 'application/octet-stream';
         add_header 'Content-Disposition' 'attachment; filename=random.dat';
@@ -35,7 +35,7 @@ server {
         add_header "Pragma" "no-cache";
     }
 
-    location /librespeed/empty.dat {
+    location /data/empty.dat {
         add_header Access-Control-Allow-Methods "GET, POST";
         add_header "Cache-Control" "no-store, no-cache, must-revalidate, max-age=0, s-maxage=0";
         add_header "Cache-Control" "post-check=0, pre-check=0";
