@@ -5,14 +5,58 @@ server {
     access_log /var/log/webui_access.log;
     error_log /var/log/webui_error.log;
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /favicon.ico { 
+        access_log off; 
+        log_not_found off; 
+    }
     
     location / {
-        # forward application requests to the gunicorn server
+        # Forward application requests to the gunicorn server
         proxy_pass http://unix:/run/wlanpi_webui.sock;
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /app/librespeed/ {
+        proxy_pass http://127.0.0.1:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /app/cockpit/ {
+        proxy_pass https://127.0.0.1:9090/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Required for websockets to function
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # See: https://github.com/cockpit-project/cockpit/issues/5239
+        gzip off;
+    }
+
+    location /app/kismet/ {
+        proxy_pass http://127.0.0.1:2501/;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header X-Proxy-Dir kismet/;
+        add_header X-Proxy-Dir kismet/;
+        proxy_http_version 1.1;
+        client_max_body_size 0;
+    }
+
+    location /app/grafana/ {
+        proxy_pass https://127.0.0.1:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
