@@ -87,7 +87,7 @@ var chart1,
         overheadCompensationFactor: 1.0, // 1 = raw performance
         mpot: false,
         forceIE11Workaround: false,
-        test_order: 'IP_D_U',
+        test_order: 'D_U',
         time_ul_max: 15,
         time_dl_max: 15,
         time_ulGraceTime: 3,
@@ -95,10 +95,10 @@ var chart1,
         time_auto: false,
         count_ping: 100,
         enable_quirks: true,
-        url_dl: "librespeed/garbage.dat",
-        url_ul: "librespeed/empty.dat",
-        url_ping: "librespeed/empty.dat",
-        url_getIp: "librespeed/getip",
+        url_dl: "data/garbage.dat",
+        url_ul: "data/empty.dat",
+        url_ping: "data/empty.dat",
+        url_getIp: "getip",
         getIp_ispInfo: false
     },
     max_upload = 0,
