@@ -5,9 +5,8 @@ from wlanpi_webui.librespeed import bp
 
 @bp.route("/librespeed")
 def librespeed():
-    spt_port = "8080"
     base = request.host.split(":")[0]
-    iframe = f"http://{base}:{spt_port}/librespeed_simple.html"
+    iframe = f"http://{base}/app/librespeed/librespeed_simple.html"
     return render_template(
         "/public/librespeed.html",
         iframe=iframe,
@@ -16,9 +15,8 @@ def librespeed():
 
 @bp.route("/librespeed2")
 def librespeed2():
-    spt_port = "8080"
     base = request.host.split(":")[0]
-    iframe = f"http://{base}:{spt_port}/librespeed_detailed.html"
+    iframe = f"http://{base}/app/librespeed/librespeed_detailed.html"
     return render_template(
         "/public/librespeed.html",
         iframe=iframe,
